# ai-reviewer

./: .gitignore  LICENSE  README.md  batch_train.py  config.toml  eval_csv.py  main.py  params.json  pyproject.toml  train_hf_classifier.py  train_lgbm.py  train_sgdc.py
ai_reviewer/: __init__.py  api.py  config.py  embeddings.py  tasks.py
