[project]
name = "ai-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "scikit-learn>=1.7.1",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
    "joblib>=1.4.2",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
]
