[project]
name = "ai-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "scikit-learn>=1.7.1",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
    "joblib>=1.4.2",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "lightgbm>=4.6.0",
    "pandas>=2.3.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.8.0"]
gpu = ["torch>=2.8.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
